--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-        <div class="container-fluid" style="background-color:black;" layout="row">
+<nav class="navbar navbar-default">
+    
+     <div class="container-fluid" style="background-color:black;" layout="row">
             <div routerLinkActive="active" class="navbar-header" >
                 <a routerLink="/biography"  style="color:white;" class="navbar-brand" (loadedFeature)="biography">Biography</a>
               </div>
@@ -10,6 +12,15 @@
             <ul class="nav navbar-nav navbar-right" >
               <li routerLinkActive="active"><a routerLink="/login" style="color:white;"  class="navbar-brand" (loadedFeature)="login">Login</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown" appDropdown>
+                  <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
+                    <li><a style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      
+        </nav>
